<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/record"
        android:title="@string/item1"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/chat"
        android:title="@string/item2"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/myaccount"
        android:title="@string/item3"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/bonus"
        android:title="@string/item4"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/invest"
        android:title="@string/item5"/>
</menu>